[package]
name = "dune_roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
rltk = { git = "https://github.com/amethyst/bracket-lib", features = ["serde"] }
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4.1"
serde = { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
